--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,4 +1,4 @@
-name: Go Build
+name: go build
 
 on:
   push:
@@ -17,4 +17,6 @@ jobs:
         with:
           go-version: '1.14.4'
 
-      - run: go build -v -ldflags "-s -w" -o .\gospy .\main.go
+      - run: go build -v -ldflags "-s -w" -o ./gospy ./cmd/gospy/main.go
+
+      - run: go build -v -ldflags "-s -w" -o ./gospyserver ./cmd/gospyserver/main.go
