--- a/.github/workflows/go-build-ubuntu.yml
+++ b/.github/workflows/go-build-ubuntu.yml
@@ -1,4 +1,4 @@
-name: go build
+name: go build ubuntu
 
 on:
   push:
@@ -17,6 +17,8 @@ jobs:
         with:
           go-version: '1.14.4'
 
-      - run: go build -v -ldflags "-s -w" -o ./gospy ./cmd/gospy/main.go
-
-      - run: go build -v -ldflags "-s -w" -o ./gospyserver ./cmd/gospyserver/main.go
+      - run: |
+          go build -v -ldflags "-s -w" -o ./gospy ./cmd/gospy/main.go
+          go build -v -ldflags "-s -w" -o ./gospyserver ./cmd/gospyserver/main.go
+        env:
+          CGO_ENABLED: 0
