--- a/.github/workflows/go-build-ubuntu.yml
+++ b/.github/workflows/go-build-ubuntu.yml
@@ -18,7 +18,7 @@ jobs:
           go-version: '1.14.4'
 
       - run: |
-          go build -v -ldflags "-s -w" -o ./gospy ./cmd/gospy/main.go
-          go build -v -ldflags "-s -w" -o ./gospyserver ./cmd/gospyserver/main.go
+          go build -v -ldflags "-s -w" -o ./client ./cmd/client/main.go
+          go build -v -ldflags "-s -w" -o ./server ./cmd/server/main.go
         env:
           CGO_ENABLED: 0
